nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplenodejs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simplenodejs
  template:
    metadata:
      labels:
        app: simplenodejs
    spec:
      containers:
      - name: simplenodejs
        image: 713432144879.dkr.ecr.ap-southeast-2.amazonaws.com/simplenodejs:1
        ports:
        - containerPort: 8080
