pod-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
  labels:
    name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - name: kubia
    image: 713432144879.dkr.ecr.ap-southeast-2.amazonaws.com/simplenodejs
