pod-liveness-probe-initial-delay.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-liveness
spec:
  containers:
  - image: carlli/nodejs-nothealthy
    name: kubia
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 15
