pod-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-liveness
spec:
  containers:
  - image: carlli/nodejs-nothealthy
    name: kubia
    livenessProbe:
      httpGet:
        path: /
        port: 8080
