pod-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  labels:
    name: kubia-pod
spec:
  containers:
  - name: kubia
    image: 713432144879.dkr.ecr.ap-southeast-2.amazonaws.com/simplenodejs
    ports:
    - containerPort: 8080
      protocol: TCP
