alb-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-nodeport
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: simplenodejs
