echoserver-elb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elb-echoserver
  namespace: default
  labels:
    app: echoserver
  annotations:
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: LoadBalancer
