nodejs-nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlb-simplenodejs
  namespace: default
  labels:
    app: simplenodejs
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: simplenodejs
  type: LoadBalancer
